k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deployment
spec:
  selector:
    matchLabels:
      component: db
  template:
    metadata:
      name: mysql-pod
      labels:
        component: db
    spec:
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: db-pvc
      containers:
        - name: mysql
          image: mysql:5.7
          args:
            - --disable-partition-engine-check
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql
