k8s/horizon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: horizon-deployment
spec:
  selector:
    matchLabels:
      component: horizon
  template:
    metadata:
      name: horizon-pod
      labels:
        component: horizon
    spec:
      volumes:
        - name: api-storage
          persistentVolumeClaim:
            claimName: api-storage-pvc
        - name: backup
          persistentVolumeClaim:
            claimName: backup-pvc
        - name: api-env
          configMap:
            name: api-cm
      containers:
        - name: horizon
          image: moail/timeline-api
          securityContext:
            runAsGroup: 1500
            runAsUser: 1500
          command:
            - php
          args:
            - artisan
            - horizon
          volumeMounts:
            - name: api-storage
              mountPath: /api/storage/app
            - name: backup
              mountPath: /backup
            - name: api-env
              mountPath: /api/.env
              subPath: .env
