k8s/queue-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: queue-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    component: queue
