k8s/search-engine-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: search-engine-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 9200
      targetPort: 9200
  selector:
    component: search-engine
