k8s/web-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-cluster-ip-service
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: web-port
  selector:
    component: web
