k8s/api-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-network-policy
spec:
  podSelector:
    matchLabels:
      component: api
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - port: 80
