k8s/horizon-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: horizon-network-policy
spec:
  podSelector:
    matchLabels:
      component: horizon
  policyTypes:
    - Ingress
