k8s/web-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-network-policy
spec:
  podSelector:
    matchLabels:
      component: web
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 80
